--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -3,14 +3,15 @@
 }
 
 #book-container {
-  position: relative;
   @extend .callout;
-  background-color: transparent ! important;
-  border: solid 1px lighten($base-border-color, 10%);
-  padding-top: 20px ! important;
-  padding-bottom: 20px ! important;
+  position: relative;
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+  background-color: transparent !important;
   overflow: hidden;
+  border: solid 1px lighten($base-border-color, 10%);
 }
+
 #book-intro {
   position: absolute;
   top: 40px;
@@ -18,34 +19,39 @@
   width: 200px;
   font-size: 13px;
   text-align: center;
+
   p {
     padding-bottom: 20px;
   }
+
   img.creative-commons {
     display: block;
     margin: 10px auto;
   }
+
   .license {
     font-size: 11px;
     line-height: 1.3;
     color: $light-font-color;
   }
+
   a#open-book {
-    font-weight: bold;
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-weight: bold;
   }
 }
 
 #about-book {
+  @include background-image-2x("/images/icons/info", 18px, 17px, 40px 1px);
   display: none;
-  text-indent: 40px;
-  text-align: center;
+  padding-left: 22px;
   font-size: 12px;
   color: $light-font-color;
-  padding-left: 22px;
-  @include background-image-2x('/images/icons/info', 18px, 17px, 40px 1px);
+  text-align: center;
+  text-indent: 40px;
+
   &.visible {
     display: inline-block;
   }
@@ -54,15 +60,19 @@
 ol.book-toc {
   @extend .unstyled;
   margin: 30px 36px;
+
   li.chapter {
     margin-bottom: 0.6em;
   }
+
   ol {
     list-style: none;
   }
+
   h2 {
     color: $font-color;
   }
+
   a {
     padding-left: 4px;
   }
@@ -81,22 +91,24 @@ ol.book-toc {
 .book table.commands {
   font-size: 1.2em;
 }
+
 .book table.commands tr td {
   padding: 2px;
 }
+
 .book table.commands tr td small {
-  color: #777;
   font-size: 0.8em;
+  color: #777;
 }
 
 .book table.ref {
+  width: 100%;
   margin-bottom: 10px;
-  width:  100%;
 }
 
 .book table.ref tr {
-  border-color: #777;
   border: 1px solid;
+  border-color: #777;
 }
 
 .book table.ref th, td {
@@ -104,27 +116,33 @@ ol.book-toc {
 }
 
 .book table.ref th:nth-child(1), td:nth-child(1) {
-  padding: 5px;
   width: 25%;
+  padding: 5px;
 }
 
 #book-chapters {
   @extend .section-nav-container;
+
   #chapters-dropdown {
-    padding: 12px;
     top: 30px;
+    padding: 12px;
   }
+
   ol {
     margin: 0;
+
     li {
-      line-height: $base-line-height * .8;
+      line-height: $base-line-height * 0.8;
+
       h2 {
         margin: 14px 0;
         font-size: 14px;
         line-height: normal;
       }
+
       ol {
         margin-left: 0;
+
         a {
           font-weight: normal;
         }
@@ -133,4 +151,6 @@ ol.book-toc {
   }
 }
 
-.switch a { color: #aaa; }
+.switch a {
+  color: #aaa;
+}
