--- a/app/assets/stylesheets/book2.scss
+++ b/app/assets/stylesheets/book2.scss
@@ -1,24 +1,22 @@
 .edition2 {
-
   * {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
 
   body {
-    max-width: 700px;
-    margin: 0 auto;
     padding-top: 80px;
+    margin: 0 auto;
+    max-width: 700px;
   }
 
   /* general blocks */
 
-  p, dd { /* general text styles */
+  p,
+  dd { /* general text styles */
     font-family: sans-serif;
-    text-indent: 0px;
     font-size: 14px;
     line-height: 22px;
+    text-indent: 0;
   }
 
   section[data-type="preface"] > h1 + p,
@@ -58,9 +56,9 @@
   }
 
   section[data-type="titlepage"] h1 {
-    border-bottom: 1px solid #333;
-    margin-top: 100px;
     padding-bottom: 10px;
+    margin-top: 100px;
+    border-bottom: 1px solid #333;
   }
 
   section[data-type="titlepage"] h1 {
@@ -69,9 +67,9 @@
   }
 
   section[data-type="titlepage"] h2 {
+    margin-top: 20px;
     font-size: 1.2em;
     line-height: 120%;
-    margin-top: 20px;
   }
 
   /* styling and positioning for author names and other text */
@@ -81,12 +79,12 @@
   }
 
   section[data-type="titlepage"] p {
+    float: none;
+    margin-top: 0;
+    margin-bottom: 0;
     font-family: sans-serif;
     font-size: 13pt;
     line-height: 16pt;
-    margin-top: 0pt;
-    margin-bottom: 0pt;
-    float: none;
     text-indent: 0;
   }
 
@@ -102,25 +100,26 @@
   }
 
   section[data-type="copyright-page"] p {
+    margin: 0;
     font-family: sans-serif;
     font-size: 0.8em;
-    margin: 0;
     text-indent: 0;
   }
 
   /* dedication */
 
   section[data-type="dedication"] {
+    padding-top: 100px;
     font-family: serif;
     font-style: italic;
     page-break-after: always;
     text-align: center;
-    padding-top: 100px;
   }
 
   /* table of contents */
 
   /* global styles for the table of contents */
+
   /* table of contents is a series of nested lists in a nav element */
 
   nav[data-type="toc"] a { /* all table of contents entries are also links */
@@ -132,10 +131,10 @@
   }
 
   nav[data-type="toc"] > h1 { /* table of contents heading */
-    font-size: 1.5em;
-    line-height: 120%;
     margin-top: 80px;
     margin-bottom: 50px;
+    font-size: 1.5em;
+    line-height: 120%;
     text-align: center;
   }
 
@@ -152,9 +151,9 @@
   nav[data-type="toc"] li[data-type="chapter"],
   nav[data-type="toc"] li[data-type="part"],
   nav[data-type="toc"] li[data-type="appendix"] {
+    margin-left: 0;
     font-size: 1em;
     line-height: 120%;
-    margin-left: 0;
     text-indent: 0;
   }
 
@@ -165,9 +164,9 @@
   }
 
   nav[data-type="toc"] li[data-type="part"] > a {
-    border-bottom: 1px solid #333;
-    width: 100%;
     display: inline-block;
+    width: 100%;
+    border-bottom: 1px solid #333;
   }
 
   nav[data-type="toc"] li[data-type="part"] ol {
@@ -189,10 +188,10 @@
   /* entries for sub-sections */
 
   nav[data-type="toc"] li[data-type="chapter"] ol {
+    margin-left: 20px;
     font-family: sans-serif;
     font-size: 1em;
     line-height: 120%;
-    margin-left: 20px;
     text-indent: -10px;
   }
 
@@ -249,8 +248,8 @@
   section[data-type="preface"] > h1,
   section[data-type="chapter"] > h1,
   section[data-type="appendix"] > h1 {
-    font-size: 1.8em;
     margin-top: 70px;
+    font-size: 1.8em;
     margin-bottom: 40px;
     text-align: left;
   }
@@ -258,30 +257,30 @@
   /* section headings */
 
   section[data-type="sect1"] h1 { /* A-level headings */
-    font-size: 1.5em;
     margin-top: 40px;
     margin-bottom: 20px;
+    font-size: 1.5em;
   }
 
   section[data-type="sect2"] h2 { /* B-level headings */
-    font-size: 1.1em;
     margin-top: 30px;
     margin-bottom: 10px;
+    font-size: 1.1em;
   }
 
   section[data-type="sect3"] h3 { /* C-level headings */
-    font-size: 1.1em;
     margin-top: 20px;
     margin-bottom: 10px;
+    font-size: 1.1em;
   }
 
   /* parts */
 
   div[data-type="part"] > h1 {
-    font-size: 1.8em;
-    text-align: center;
     margin-top: 100px;
     margin-bottom: 70px;
+    font-size: 1.8em;
+    text-align: center;
   }
 
   /* lists */
@@ -290,12 +289,14 @@
     margin: 15px 0 15px 40px;
   }
 
-  ul li, ol li,
-  ul li p, ol li p {
+  ul li,
+  ol li,
+  ul li p,
+  ol li p {
+    margin-top: 5px;
     font-family: sans-serif;
     font-size: 1em;
     line-height: 120%;
-    margin-top: 5px;
     text-indent: 0;
   }
 
@@ -304,16 +305,16 @@
   }
 
   dt { /* definition list terms */
+    margin-top: 15px;
+    margin-bottom: 4px;
     font-family: sans-serif;
     font-size: 0.9em;
     line-height: 120%;
-    margin-top: 15px;
-    margin-bottom: 4px;
   }
 
   dd { /* definition list descriptions */
-    text-indent: 0;
     margin-left: 20px;
+    text-indent: 0;
   }
 
   dd p {
@@ -325,17 +326,17 @@
   table {
     margin-top: 30px;
     margin-bottom: 30px;
-    border-bottom: 1px solid #888;
     border-collapse: collapse;
+    border-bottom: 1px solid #888;
   }
 
   table caption {
+    margin: 0 0 20px;
+    padding: 0;
     font-family: sans-serif;
     font-size: 0.8em;
     line-height: 120%;
     text-align: left;
-    margin: 0 0 20px 0;
-    padding: 0;
   }
 
   tr {
@@ -343,11 +344,11 @@
   }
 
   th { /* table heading rows */
+    margin-top: 0;
     font-family: sans-serif;
     font-size: 0.8em;
     line-height: 120%;
     text-align: left;
-    margin-top: 0;
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
   }
@@ -363,95 +364,98 @@
   }
 
   table p { /* table body text */
-    text-indent: 0;
     margin-top: 6px;
+    text-indent: 0;
   }
 
-  td pre.programlisting, td pre.screen, td pre.literallayout, td code { /* allow code in tables to wrap */
-    white-space: pre-wrap;
+  td pre.programlisting,
+  td pre.screen,
+  td pre.literallayout,
+  td code { /* allow code in tables to wrap */
     word-wrap: break-word;
+    white-space: pre-wrap;
   }
 
   /* figures */
 
   figure { /* figure containers */
+    display: block;
+    padding: 0;
     margin-top: 30px;
     margin-bottom: 30px;
-    padding: 0;
-    display: block;
     page-break-inside: avoid;
   }
 
   figure img { /* figure images */
+    max-width: 100%;
+    padding: 5px 0 5px 0;
+    margin: 0;
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
-    padding: 5px 0 5px 0;
-    max-width: 100%;
-    margin: 0;
   }
 
   figcaption {
+    display: block;
     font-family: serif;
     font-size: 1em;
     font-style: italic;
     line-height: 120%;
-    display: block;
   }
 
   /* sidebars */
 
   aside { /* sidebar containers */
+    padding: 20px 20px 10px;
+    margin: 30px 0;
     background-color: #d8d8d8;
     border: 1px solid #d8d8d8;
-    padding: 20px 20px 10px 20px;
-    margin: 30px 0 30px 0;
   }
 
   aside h5 { /* sidebar titles */
+    padding: 0;
+    margin: 0;
     font-family: sans-serif;
     font-size: 1em;
     line-height: 120%;
     text-align: center;
-    margin: 0;
-    padding: 0;
   }
 
   aside h6 { /* sidebar subtitles */
     font-family: sans-serif;
-    font-weight: bold;
     font-size: 0.9em;
+    font-weight: bold;
     line-height: 120%;
   }
 
   aside p { /* sidebar text */
+    margin-top: 6px;
     font-family: serif;
     font-size: 1em;
     line-height: 130%;
     text-indent: 0;
-    margin-top: 6px;
   }
 
   /* admonitions */
 
   div[data-type="note"],
   div[data-type="warning"] { /* admonition containers */
+    padding: 10px 0;
+    margin: 30px;
     border-top: 2px solid #888;
     border-bottom: 1px solid #d8d8d8;
-    padding: 10px 0;
-    margin: 30px 30px 30px 30px;
     page-break-inside: avoid; /* avoid breaking admonitions across pages */
   }
 
   div[data-type="note"] h1,
   div[data-type="warning"] h1 { /* admonition titles */
-    color: #000;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 0.8em;
-    text-transform: uppercase;
-    text-align: center;
-    margin: 4px 0;
     padding: 0;
+    margin: 4px 0;
+    font-family: sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    text-transform: uppercase;
   }
 
   div[data-type="note"] p,
@@ -459,37 +463,39 @@
     font-family: serif;
     font-size: 1em;
     line-height: 120%;
-    text-indent: 0in;
+    text-indent: 0;
   }
 
   /* code */
 
-  pre, code { /* monospace font for both code blocks and inline code */
+  pre,
+  code { /* monospace font for both code blocks and inline code */
     font-family: monospace;
   }
 
   pre {
     background: #eee;
+
     code {
       display: inline;
-      border: 0px;
       background: #eee;
+      border: 0;
     }
   }
 
   pre { /* code blocks */
+    margin: 10px 0;
+    overflow-x: auto;
     font-size: 0.9em;
     line-height: 120%;
-    margin: 10px 0px;
-    overflow-x: auto;
     color: #333;
   }
 
   code { /* inline code */
-    border: 1px solid #f5f5f5;
-    padding: 0px;
-    background: #eee;
+    padding: 0;
     color: #333;
+    background: #eee;
+    border: 1px solid #f5f5f5;
   }
 
   table pre { /* code blocks within tables */
@@ -505,22 +511,22 @@
   }
 
   div[data-type="example"] h5 { /* titles for formal code examples */
+    padding-bottom: 6px;
+    margin-top: 30px;
     font-family: sans-serif;
     font-size: 0.8em;
     line-height: 120%;
     border-bottom: 1px solid #d8d8d8;
-    padding-bottom: 6px;
-    margin-top: 30px;
   }
 
   /* blockquote */
 
   blockquote {
+    margin-right: 30px;
+    margin-left: 30px;
     font-family: sans-serif;
     font-size: 0.9em;
     line-height: 130%;
-    margin-left: 30px;
-    margin-right: 30px;
   }
 
   blockquote p {
@@ -530,37 +536,37 @@
   /* website nav element */
 
   div.navbar {
-    font-family: sans-serif;
-    background-color: #E8E8E8;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
+    font-family: sans-serif;
+    background-color: #e8e8e8;
     border-bottom: 1px solid #d8d8d8;
   }
 
   div.navbar h1 {
     float: left;
-    font-size: 1em;
-    font-weight: normal;
     padding: 0;
     margin: 0;
+    font-size: 1em;
+    font-weight: normal;
     color: #999;
   }
 
   div.navbar p {
     float: right;
-    font-size: 1em;
-    font-weight: normal;
     padding: 0;
     margin: 0;
     font-family: sans-serif;
+    font-size: 1em;
+    font-weight: normal;
   }
 
   div.navbar p a {
-    text-decoration: none;
     color: #999;
+    text-decoration: none;
   }
 
   /* iPad
@@ -584,24 +590,23 @@
 
     /* website nav element */
 
-  div.navbar {
-    position: relative;
-    padding: 10px 20px 10px 20px;
-    border-bottom: 2px solid #e8e8e8;
-    box-shadow: 0px 0px 0px #f0f0f0;
-    text-align: center;
-  }
+    div.navbar {
+      position: relative;
+      padding: 10px 20px;
+      text-align: center;
+      border-bottom: 2px solid #e8e8e8;
+      box-shadow: 0 0 0 #f0f0f0;
+    }
 
-  div.navbar h1 {
-    float: none;
-    margin-bottom: 10px;
-  }
+    div.navbar h1 {
+      float: none;
+      margin-bottom: 10px;
+    }
 
-  div.navbar p {
-    float: none;
-    text-indent: 0;
-  }
-
+    div.navbar p {
+      float: none;
+      text-indent: 0;
+    }
   }
 
   /* syntax highlighting and coloring text in general */
@@ -687,15 +692,15 @@
 
   /* Chacon's additions to make command line look more like a command line */
   pre[data-code-language="console"] {
-    background: #eee;
     padding: 10px;
+    background: #eee;
   }
   pre[data-code-language="console"] code.go {
-    color: #555;
     font-size: 1.0em;
+    color: #555;
   }
   pre[data-code-language="console"] code.gp {
-    color: #009900;
     font-weight: bold;
+    color: #009900;
   }
 }
