--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -12,74 +12,74 @@
 
   <h3>Debian/Ubuntu</h3>
   <p>For the latest stable version for your release of Debian/Ubuntu</p>
-  <pre># apt-get install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># apt-get install git</pre>
   <p>For Ubuntu, this PPA provides the latest stable upstream Git version</p>
-  <pre># add-apt-repository ppa:git-core/ppa</pre>
-  <pre># apt update; apt install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># add-apt-repository ppa:git-core/ppa</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># apt update; apt install git</pre>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <pre># sudo apt install gitk</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># sudo apt install gitk</pre>
   
   <h3>Fedora</h3>
   <p>Fedora 21 and underneath:</p>
-  <pre># yum install git</pre><br>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># yum install git</pre>
   <p>Fedora 22 and later:</p>
-  <pre># dnf install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># dnf install git</pre>
   <p>Optionally, if you would also like to install gitk, then run the following:</p>
-  <pre># sudo yum install tk</pre>
-  <pre># sudo yum install gitk</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># sudo yum install tk</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># sudo yum install gitk</pre>
 
   <h3>Gentoo</h3>
-  <pre># emerge --ask --verbose dev-vcs/git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># emerge --ask --verbose dev-vcs/git</pre>
   <p>Check this <a href="https://bugs.gentoo.org/171230">Gentoo issue</a> for more information on how to install Gitk on Gentoo</p>
 
   <h3>Arch Linux</h3>
-  <pre># pacman -S git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pacman -S git</pre>
   <p>Download Git and you will be prompted to download gitk. Check that optional dependency</p>
 
   <h3>openSUSE</h3>
-  <pre># zypper install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># zypper install git</pre>
   <p>To install gitk:</p>
-  <pre># zypper install gitk</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># zypper install gitk</pre>
 
   <h3>Mageia</h3>
-  <pre># urpmi git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># urpmi git</pre>
   <p>If you would like to optionally install gitk: here is the <a href="https://madb.mageia.org/package/show/application/0/name/gitk">page for gitk</a> on Mageia's package catalog. It has a list of RPM files. Choose your RPM file and then run the following on it:</p>
-  <pre>$ rpm -i file.rpm</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;">$ rpm -i file.rpm</pre>
   <p>Replace <i>file.rpm</i> with the path to the RPM file that you installed.</p>
 
   <h3>Nix/NixOS</h3>
-  <pre># nix-env -i git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># nix-env -i git</pre>
   <p>To install gitk:</p>
-  <pre># nix-env -iA nixos.gitAndTools.gitFull</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># nix-env -iA nixos.gitAndTools.gitFull</pre>
 
   <h3>FreeBSD</h3>
-  <pre># pkg install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pkg install git</pre>
   
   <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
-  <pre># pkgutil -i git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pkgutil -i git</pre>
   <p>Optionally, if you would also like to install gitk (on <a href="https://www.opencsw.org/packages/gitk/#:~:text=Solaris%2010%20and%2011">Solaris 9/10</a> only), then run the following:</p>
-  <pre># pkgadd -d http://get.opencsw.org/now</pre>
-  <pre># /opt/csw/bin/pkgutil -U</pre>
-  <pre># /opt/csw/bin/pkgutil -y -i gitk </pre>
-  <pre># /usr/sbin/pkgchk -L CSWgitk # list files</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pkgadd -d http://get.opencsw.org/now</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># /opt/csw/bin/pkgutil -U</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># /opt/csw/bin/pkgutil -y -i gitk </pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># /usr/sbin/pkgchk -L CSWgitk # list files</pre>
 
   <h3>Solaris 11 Express</h3>
-  <pre># pkg install developer/versioning/git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pkg install developer/versioning/git</pre>
   
   <h3>OpenBSD</h3>
-  <pre># pkg_add git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># pkg_add git</pre>
 
   <h3>Alpine</h3>
-  <pre># apk add git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># apk add git</pre>
   <p>Gitk is a subpackage of git on Alphine Linux. It can be invoked with git-gitk.</p>
   
   <h3>Red Hat Enterprise Linux, Oracle Linux, CentOS, Scientific Linux, et al.</h3>
   <p>RHEL and derivatives typically ship older versions of git. You can <a href="https://www.kernel.org/pub/software/scm/git/">download a tarball</a> and build from source, or use a 3rd-party repository such as <a href="https://ius.io/">the IUS Community Project</a> to obtain a more recent version of git.</p>
 
   <h3>Slitaz</h3>
-  <pre># tazpkg get-install git</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># tazpkg get-install git</pre>
   <p>If you also want to install gitk click <a href="http://forum.slitaz.org/topic/gitk?bb_attachments=43156&bbat=2350">here</a> to get a tazpkg file for gitk. After installing it, run:</p>
-  <pre># tazpkg install file.tazpkg</pre>
+  <pre style="height: 10px;overflow-y: hidden;padding-top: 0;margin-top: 0;"># tazpkg install file.tazpkg</pre>
   <p>Remember to replace file.tazpkg with the path to your downloaded tazpkg file.</p>
 
 </div>
