docs: link to githooks with 'Hooks'
In contrast to '.gitattributes', '.gitignore' and '.gitmodules',
'.githooks' is not the name of a special file recognized by Git, so
let's use a more friendly name for the link to the 'githooks' man page.

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -5,7 +5,7 @@
   <li><%= man('giteveryday', 'Everyday Git') %></li>
   <li><%= man('gitfaq', 'Frequently Asked Questions (FAQ)') %></li>
   <li><%= man('gitglossary', 'Glossary') %></li>
-  <li><%= man('githooks') %></li>
+  <li><%= man('githooks', 'Hooks') %></li>
   <li><%= man('gitignore') %></li>
   <li><%= man('gitmodules') %></li>
   <li><%= man('gitrevisions', 'Revisions') %></li>
