--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -31,5 +31,10 @@
   <%= link_to "on kernel.org", "https://www.kernel.org/pub/software/scm/git/" %>.
   The latest version is
   <%= link_to @latest.name, "https://www.kernel.org/pub/software/scm/git/git-#{@latest.name}.tar.gz"%>.
+    
+  <h3>Installing git-gui</h3>
+  <p>If you would like to install <a href="https://git-scm.com/docs/git-gui/">git-gui</a>, git's own 
+  commit gui you can do so using <a href="https://bre.sh/">homebrew</a><br>
+  <code>$ brew install git-gui</code></p>
 
 </div>
