--- a/app/views/downloads/download_mac.html.erb
+++ b/app/views/downloads/download_mac.html.erb
@@ -33,8 +33,9 @@
   <%= link_to @latest.name, "https://www.kernel.org/pub/software/scm/git/git-#{@latest.name}.tar.gz"%>.
     
   <h3>Installing git-gui</h3>
-  <p>If you would like to install <a href="https://git-scm.com/docs/git-gui/">git-gui</a>, git's own 
-  commit gui you can do so using <a href="https://bre.sh/">homebrew</a><br>
-  <code>$ brew install git-gui</code></p>
+  <p>If you would like to install <a href="https://git-scm.com/docs/git-gui/">git-gui</a> and <a href="https://git-scm.com/docs/gitk/">gitk</a>,
+  git's commit GUI and interactive history browser, you can do so using <a href="https://bre.sh/">homebrew</a><br>
 
+  <code>$ brew install git-gui</code></p>
+  
 </div>
