--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -1,6 +1,17 @@
 // Palette
-$orange:             #f14e32;
-$blue:               #009099;
+$orange:                  #f14e32;
+$blue:                    #009099;
+$font-color:              #4e443c;
+$light-font-color:        #9a9994;
+$link-color:              #0388a6;
+$fixed-width-font-color:  #4e443c;
+$base-border-color:       #d8d7cf;
+$callout-color:           #e9e8e0;
+$highlight-bg-color:      #eee0b5;
+$black-3:                 #333333;
+$main-bg:                 #fcfcfa;
+$button-bg-color:         rgba(223, 221, 213, 0.33);
+$button-bg-hover-color:   rgba(250, 250, 250, 0.9);
 
 // breakpoints
 $mobile-xs: 480px;
@@ -10,23 +21,10 @@ $tablet: 768px;
 $default:  940px;
 $page-width: $default;
 
-$font-color:  		   #4e443c;
-$light-font-color:   #9a9994;
-
-$link-color:         #0388a6;
-$link-hover-color:   lighten($link-color, 10%);
-
 $base-font-family-fallback: Roboto Slab, DejaVu Serif, Georgia, Times New Roman, sans-serif;
 $base-font-family: Adelle, $base-font-family-fallback;
 $base-font-size:   14px;
 $base-line-height: 22px;
 
 $fixed-width-font-family: Courier, monospace;
-$fixed-width-font-color: #4e443c;
 $fixed-width-line-height: 18px;
-
-$base-border-color:  #d8d7cf;
-$callout-color:      #e9e8e0;
-
-$black-3 : #333333;
-$main-bg: #fcfcfa;
