--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -57,7 +57,7 @@ form#search {
 
   &.focus {
     border-color: #007175;
-    background-color: #fff;
+    background-color: var(--main-bg);
   }
 }
 
