--- a/assets/sass/front-page.scss
+++ b/assets/sass/front-page.scss
@@ -132,12 +132,12 @@ $monitor-height: 271px;
   height: $monitor-height - 45;
   padding-top: 45px;
   padding-left: 40px;
-  color: #fff;
+  color: var(--main-bg);
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 
   h4 {
     font-weight: normal;
-    color: #fff;
+    color: var(--main-bg);
     font-size: 16px;
   }
 
@@ -166,7 +166,7 @@ $monitor-height: 271px;
     padding: 5px 0;
     margin-top: 10px;
     font-size: 16px;
-    color: #fff;
+    color: var(--main-bg);
     text-align: center;
     background-image: linear-gradient(#1c868c, #186368);
     border-top: solid 1px #085e64;
