--- a/assets/sass/lists.scss
+++ b/assets/sass/lists.scss
@@ -102,7 +102,7 @@ ol#about-nav {
 
       &.current {
         @include background-image-2x($baseurl + "images/icons/nav-circles", 90px, 180px, 0 -90px);
-        color: #fff;
+        color: var(--main-bg);
         opacity: 1;
       }
 
