--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -26,7 +26,7 @@
   table {
     width: 100%;
     line-height: 1;
-    background-color: #fff;
+    background-color: var(--main-bg);
     @include border-bottom-right-radius(3px);
     @include border-bottom-left-radius(3px);
 
@@ -60,13 +60,13 @@
 
         &:hover,
         &.highlight {
-          color: #fff;
+          color: var(--main-bg);
           text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
           background: #55bec4;
           background-image: linear-gradient(#55bec4, #54b2b7);
 
           span {
-            color: #fff;
+            color: var(--main-bg);
           }
         }
       }
